# vehicle_voice_alert_system

./: .beta.repos  .gitignore  .pre-commit-config.yaml  README.md  start.sh  vehicle_voice_alert_system.repos
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: update_beta_branches.sh
.github/workflows/: update-beta-branch.yaml  update-signage-version.yaml
src/vehicle_voice_alert_system/: package.xml  setup.cfg  setup.py
src/vehicle_voice_alert_system/config/: vehicle_voice_param.yaml
src/vehicle_voice_alert_system/launch/: vehicle_voice_alert_system.launch.xml
src/vehicle_voice_alert_system/src/vehicle_voice_alert_system/: announce_controller.py  autoware_diagnostic.py  autoware_interface.py  autoware_state_interface.py  heartbeat.py  parameter_interface.py  ros_service_interface.py  vehicle_voice_alert_system.py
src/vehicle_voice_alert_system_interfaces/: CMakeLists.txt  package.xml
src/vehicle_voice_alert_system_interfaces/srv/: Volume.srv
src/vehicle_voice_alert_system_version/: CMakeLists.txt  package.xml
vehicle_voice_alert_system/launch/: vehicle_voice_alert_system.launch.xml
