<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_voice_alert_system</name>
  <version>0.1.0</version>
  <description>Vehicle voice alert system</description>
  <maintainer email="tkh.my.p@gmail.com">khtan</maintainer>
  <license>Apache License 2.0</license>

  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_auto_system_msgs</depend>
  <depend>python-pulsectl-pip</depend>
  <depend>rclpy</depend>
  <depend>tier4_api_msgs</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>tier4_hmi_msgs</depend>
  <depend>diagnostic_updater</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
